preparado para primer despliegue
