# src/config/db/models/incident_report.models.ts
@@ -1,12 +1,14 @@
-import { IncidentReportAttributes, IncidentReportCreationAttributes } from '@src/interface';
-import { Table, Column, Model, DataType, PrimaryKey, AutoIncrement, CreatedAt, UpdatedAt } from 'sequelize-typescript';
+import { Table, Column, Model, DataType, PrimaryKey, AutoIncrement, CreatedAt, UpdatedAt, DeletedAt, ForeignKey, BelongsTo, HasMany, BeforeCreate } from 'sequelize-typescript';
+import { Zone } from './zonas.models'; // Asegúrate de importar el modelo Zone
+import { Incident_Report_Types } from './incident_report_types.model';
+import { Incident_Report_Files } from './incident_report_files.model';
 
 @Table({
   tableName: 'incident_report',
   timestamps: true,
   paranoid: true,
 })
-export class Incident_Report extends Model<IncidentReportAttributes, IncidentReportCreationAttributes> {
+export class Incident_Report extends Model<Incident_Report> {
   @PrimaryKey
   @AutoIncrement
   @Column({
@@ -16,10 +18,24 @@ export class Incident_Report extends Model<IncidentReportAttributes, IncidentRep
   declare id: number;
 
   @Column({
+    type: DataType.STRING,
+    allowNull: false,
+    unique: true,
+  })
+  declare incidentId: string;
+
+  @Column({
     type: DataType.INTEGER,
     allowNull: false,
   })
   declare incidentType: number;
+
+  @ForeignKey(() => Incident_Report_Types)
+  @Column({
+    type: DataType.INTEGER.UNSIGNED,
+    allowNull: true,
+  })
+  declare incidentReportTypeId?: number;
 
   @Column({
     type: DataType.STRING(85),
@@ -76,6 +92,12 @@ export class Incident_Report extends Model<IncidentReportAttributes, IncidentRep
   declare calle: string;
 
   @Column({
+    type: DataType.STRING(255),
+    allowNull: false,
+  })
+  declare status: string;
+
+  @Column({
     type: DataType.STRING(10),
     allowNull: false,
   })
@@ -86,6 +108,19 @@ export class Incident_Report extends Model<IncidentReportAttributes, IncidentRep
     allowNull: true,
   })
   declare informacionAdicional?: string;
+
+  @ForeignKey(() => Zone)
+  @Column({
+    type: DataType.INTEGER.UNSIGNED,
+    allowNull: false,
+  })
+  declare zoneId: number;
+
+  @BelongsTo(() => Zone)
+  declare zone: Zone;
+
+  @HasMany(() => Incident_Report_Files)
+  declare files: Incident_Report_Files[];
 
   @CreatedAt
   @Column({
@@ -101,9 +136,17 @@ export class Incident_Report extends Model<IncidentReportAttributes, IncidentRep
   })
   declare updatedAt?: Date;
 
+  @DeletedAt
   @Column({
     type: DataType.DATE,
     allowNull: true,
   })
   declare deletedAt?: Date;
+
+  @BeforeCreate
+  static async generateConsultId(instance: Incident_Report) {
+    const maxId = await Incident_Report.max('id') as number | null;
+    const nextId = maxId !== null ? maxId + 1 : 1;
+    instance.incidentId = `G${String(nextId).padStart(5, '0')}`;
+  }
 }
