# src/config/db/models/zonas.models.ts
@@ -1,15 +1,16 @@
-// eslint-disable-next-line import/no-extraneous-dependencies
-import { Table, Column, Model, DataType } from 'sequelize-typescript';
+import { Table, Column, Model, DataType, PrimaryKey, AutoIncrement, HasMany } from 'sequelize-typescript';
+import { Incident_Report } from './incident_report.models';
 
 @Table({
-  tableName: 'zonas',
+  tableName: 'zone',
   timestamps: false,
 })
-export class Zona extends Model<Zona> {
+export class Zone extends Model {
+  @PrimaryKey
+  @AutoIncrement
   @Column({
     type: DataType.INTEGER.UNSIGNED,
-    autoIncrement: true,
-    primaryKey: true,
+    allowNull: false,
   })
   declare id: number;
 
@@ -17,5 +18,14 @@ export class Zona extends Model<Zona> {
     type: DataType.STRING(100),
     allowNull: false,
   })
-  name!: string;
+  declare zoneGeografica: string;
+
+  @Column({
+    type: DataType.STRING(100),
+    allowNull: false,
+  })
+  declare nombreReal: string;
+
+  @HasMany(() => Incident_Report)
+  declare incidentReports: Incident_Report[];
 }
